Added starter boilerplate code and matched configurations

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,4 +1,4 @@
-$font-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-sans: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $grey: hsla(0, 0, 75%, 0.5);
 
 * {
