--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
         <!-- <a href="/">{{user.name}}'s Profile</a> -->
         <a href="/">Feed</a>
         <a href="/profile/my-places">My Places</a>
-        <a href="/profile">Profile</a>
+        <a href="/profile/{{ user._id }}">Profile</a>
         <form action="/authentication/sign-out" method="POST">
           <button>Sign Out</button>
         </form>
