updated code / delegated tasks

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <a href="/">Home</a>
+      <a href="/">(Logo Goes Here)</a>
       {{#if user}}
         <!-- <a href="/">{{user.name}}'s Profile</a> -->
         <a href="/">Feed</a>
