--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
       {{#if user}}
         <!-- <a href="/">{{user.name}}'s Profile</a> -->
         <a href="/">Feed</a>
-        <a href="/profile/my-places">My Places</a>
+        <a href="/places/my-list">My Places</a>
         <a href="/profile/{{ user._id }}">Profile</a>
         <form action="/authentication/sign-out" method="POST">
           <button>Sign Out</button>
