--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -4,10 +4,10 @@
 <form method="GET">
   <label for="input-name">Username</label>
   <input required value="{{user.name}}" type="text" id="input-name" name="name" readonly/>
-
+  <p>Email: {{user.email}}</p>
   <label for="input-email">Email</label>
   <input required value="{{user.email}}" type="email" id="input-email" name="email" readonly/>
-
+  <p>Location: {{user.location}}</p>
   <label for="input-location">Location</label>
   <input required value="{{user.location}}" required type="text" name="location" id="input-location" readonly/></form>
 
