create, read and update art place

--- a/views/places/my-list.hbs
+++ b/views/places/my-list.hbs
@@ -1,10 +1,11 @@
 <h1>My Places List</h1>
+<a href="/places/create">Create art place</a>
 
 {{#each places}}
 <li>
 <img src="#" width="100">
-<a href="/places/{{_id}}">{{name}}</a>
-<small>Created at: {{createdDate}}</small></li>
+<a href="/places/{{_id}}">{{name}}</a><br>
+<small>Created at: {{createdDate}}</small>
+</li>
 {{/each}}
 <br>
-<a href="/places/create">Create art place</a>
