--- a/views/places/my-list.hbs
+++ b/views/places/my-list.hbs
@@ -3,7 +3,7 @@
 
 {{#each places}}
 <li>
-<img src="#" width="100">
+<img class="img-list" src="#" />
 <a href="/places/{{_id}}">{{name}}</a><br>
 <small>Created at: {{createdDate}}</small>
 </li>
