--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <a href="/">(Logo Goes Here)</a>
+      <a href="/"><img src="public/images/art-geo-logo.png" alt="artgeo logo"></a>
       {{#if user}}
         <!-- <a href="/">{{user.name}}'s Profile</a> -->
         <a href="/">Feed</a>
