--- a/views/places/my-list.hbs
+++ b/views/places/my-list.hbs
@@ -3,7 +3,7 @@
 
 {{#each places}}
 <li>
-<img class="img-list" src="#" />
+<img class="img-list" src="{{pictureUrl}}" />
 <a href="/places/{{_id}}">{{name}}</a><br>
 <small>Created at: {{createdDate}}</small>
 </li>
