third commit updated images

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
 {{#each places}}
   <article>
     <h4>{{ name }}</h4>
-    <img class="img-feed" src="#" />
+    <img class="img-feed" src="{{pictureUrl}}" />
     <p><strong>{{ creator.name }}</strong> - {{ description }}</p>
     <small>{{createdDate}}</small><br>
   </article>
