--- a/views/places/single.hbs
+++ b/views/places/single.hbs
@@ -1,6 +1,6 @@
 {{#with place}}
 <div>
-<img src="#"/>
+<img src="{{pictureUrl}}"/>
 <div>
 <h2>Name: {{ name }}</h2>
 <p>Description: {{ description }}</p>
