--- a/views/places/update.hbs
+++ b/views/places/update.hbs
@@ -3,7 +3,7 @@
 <form method="POST">
 
 <div>
-<img src="#" width="400"/>
+<img src="{{pictureUrl}}" width="400"/>
 
   <label for="picture-input">Update Picture</label><br>
   <input id="picture-input" name="pictureUrl" type="file" />
