--- a/views/authentication/sign-up.hbs
+++ b/views/authentication/sign-up.hbs
@@ -1,10 +1,11 @@
-<form action="/authentication/sign-up" method="POST">
+<form action="/authentication/sign-up" enctype="multipart/form-data" method="POST">
   <label for="input-name">Name</label>
   <input required type="text" id="input-name" name="name" placeholder="Your Name" />
   <label for="input-email">Email</label>
   <input required type="email" id="input-email" name="email" placeholder="Your Email" />
   <label for="input-password">Password</label>
   <input required type="password" name="password" id="input-password" placeholder="A Strong Password" />
+  <label for="picture-input">Profile Picture</label>
+  <input id="picture-input" name="picture" type="file" />
   <button>Sign Up</button>
 </form>
-<a href="/authentication/github">Sign Up with GitHub</a>
