--- a/views/authentication/sign-in.hbs
+++ b/views/authentication/sign-in.hbs
@@ -1,7 +1,13 @@
 <form action="/authentication/sign-in" method="POST">
-  <label for="input-email">Email</label>
-  <input required type="email" id="input-email" name="email" placeholder="Your Email" />
-  <label for="input-password">Password</label>
-  <input required type="password" name="password" id="input-password" placeholder="A Strong Password" />
-  <button>Sign In</button>
+  <div class="form-group">
+    <label for="input-email">Email address</label>
+    <input required type="email" id="input-email" name="email" class="form-control"/>
+  </div>
+  <div class="form-group">
+    <label for="input-password">Password</label>
+    <input required type="password" name="password" id="input-password" class="form-control"/>
+  </div>
+  <hr>
+  <button class="btn btn-primary">Log in</button>
+  <small class="form-text text-muted">New to Artgeo? <a href="/authentication/sign-up">Sign up</a></small>
 </form>
