--- a/views/authentication/sign-up.hbs
+++ b/views/authentication/sign-up.hbs
@@ -1,11 +1,26 @@
 <form action="/authentication/sign-up" enctype="multipart/form-data" method="POST">
-  <label for="input-name">Name</label>
-  <input required type="text" id="input-name" name="name" placeholder="Your Name" />
-  <label for="input-email">Email</label>
-  <input required type="email" id="input-email" name="email" placeholder="Your Email" />
-  <label for="input-password">Password</label>
-  <input required type="password" name="password" id="input-password" placeholder="A Strong Password" />
-  <label for="picture-input">Profile Picture</label>
-  <input id="picture-input" name="picture" type="file" />
-  <button>Sign Up</button>
+  <div class="form-group">
+    <label for="input-name">Username</label>
+    <input required type="text" id="input-name" name="name" class="form-control" aria-describedby="emailHelp"/>
+  </div>
+  <div class="form-group">
+    <label for="input-email">Email Address</label>
+    <input required type="email" id="input-email" name="email" class="form-control"/>
+  </div>
+  <div class="form-group">
+    <label for="input-password">Password</label>
+    <input required type="password" name="password" id="input-password" class="form-control"/>
+  </div>
+  <div>
+    <label for="picture-input">Profile Photo</label>
+    <input id="picture-input" name="picture" type="file" class="form-control-file" aria-describedby="profileHelp"/>
+    <small id="profileHelp" class="form-text text-muted">For best results, image aspect ratio should be a 1:1 square.</small>
+  </div>
+  <hr>
+  <div class="form-group form-check">
+    <input type="checkbox" class="form-check-input">
+    <label class="form-check-label" for="exampleCheck1">I agree with the <u><a href="https://www.termsfeed.com/live/4563de00-e810-48b0-ab1c-64361ee76593" target="_blank">Terms and Conditions</a></u></label>
+  </div>
+  <button class="btn btn-primary">Create my Account</button>
+  <small class="form-text text-muted">Already signed up? <a href="/authentication/sign-in">Log in</a></small>
 </form>
