--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,54 @@
 <h1>{{title}}</h1>
 
-{{#each places}}
+<div class="card-columns">
+  {{#each places}}
+  <!-- Card -->
+  <div class="card promoting-card">
+    <!-- Card content -->
+    <div class="card-body d-flex flex-row">
+      <!-- Avatar -->
+      <img src="{{user.picture}}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
+      <!-- Content -->
+      <div>
+        <!-- Title -->
+        <h4 class="card-title font-weight-bold mb-2">{{ name }}</h4>
+        <!-- Subtitle -->
+        <p class="card-text"><i class="far fa-clock pr-2"></i>{{createdDate}}</p>
+      </div>
+    </div>
+    <!-- Card image -->
+    <div class="view overlay">
+      <img class="card-img-top rounded-0" src="{{pictureUrl}}" alt="Card image cap">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+    <!-- Card content -->
+    <div class="card-body">
+      <div class="collapse-content">
+        <!-- Text -->
+        <p class="card-text collapse" id="collapseContent">{{ description }}</p>
+        <!-- Button -->
+        <a class="btn btn-flat red-text p-1 my-1 mr-0 mml-1 collapsed" data-toggle="collapse" href="#collapseContent" aria-expanded="false" aria-controls="collapseContent"></a>
+        <i class="fas fa-share-alt text-muted float-right p-1 my-1" data-toggle="tooltip" data-placement="top" title="Share this post"></i>
+        <i class="fas fa-heart text-muted float-right p-1 my-1 mr-3" data-toggle="tooltip" data-placement="top" title="I like it"></i>
+      </div>
+    </div>
+  </div>
+  {{/each}}
+</div>
+<!-- Card -->
+
+<!-- Old Format -->
+<!--{{#each places}}
   <article>
+    <hr>
     <h4>{{ name }}</h4>
-    <img class="img-feed" src="{{pictureUrl}}" />
+    <div class="shadow p-3 mb-5 bg-white rounded">
+      <img class="img-feed" src="{{pictureUrl}}" />
+    </div>
     <p><strong>{{ creator.name }}</strong> - {{ description }}</p>
     <small>{{createdDate}}</small><br>
   </article>
-{{/each}}
+{{/each}} -->
+<!-- Old Format -->
