--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,13 +17,16 @@
         </a>
         <div>
           {{#if user}}
-            <a href="/">Feed</a>
-            <a href="/places/my-list">My Places</a>
+            <a href="/map">Map</a>
+            <a href="/">Feed</a> <!--Number of places can point to COUNT of user posts-->
+            <a href="/places/my-list">My Places<span class="badge badge-light">9</span></a>
             <a href="/profile/{{ user._id }}">Profile</a>
             <form class="form-check form-check-inline" action="/authentication/sign-out" method="POST">
               <button>Sign Out</button>
             </form>
             {{else}}
+            <a href="/map">Map</a>
+            <a href="/">Feed</a>
             <a href="/authentication/sign-in">Sign In</a>
             <a href="/authentication/sign-up">Sign Up</a>
           {{/if}}
