--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -14,14 +14,14 @@ Helvetica Neue
   }
 }
 
-body {
+/*body {
   max-width: 52em;
   padding: 0 1em;
   margin: 0 auto;
   font-family: sans-serif;
   font-family: $font-sans;
   line-height: 2;
-}
+}*/
 
 a {
   color: inherit;
@@ -60,8 +60,8 @@ p {
 }
 
 .img-profile {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
 }
 
 .img-list {
