--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -1,15 +1,21 @@
+<h2>Update Your Details</h2>
+
 <form method="POST" enctype="multipart/form-data">
-  <label for="input-name">Username</label>
-  <input required value="{{user.name}}" type="text" id="input-name" name="name" placeholder="Updated Username" />
+<div class="form-group">
+    <label for="input-name">Username</label>
+    <input required type="text" id="input-name" name="name" class="form-control" aria-describedby="emailHelp"/>
+  </div>
+  <div class="form-group">
+    <label for="input-email">Email Address</label>
+    <input required type="email" id="input-email" name="email" class="form-control"/>
+  </div>
+  <div>
+    <label for="picture-input">Profile Photo</label>
+    <input id="picture-input" name="picture" type="file" class="form-control-file" aria-describedby="profileHelp"/>
+  </div>
+  <div class="form-group">
+    <input required type="password" name="password" id="input-password" class="form-control mt-4" placeholder="Enter password for verification"/>
+  </div>
 
-  <label for="input-email">Email</label>
-  <input required value="{{user.email}}" type="email" id="input-email" name="email" placeholder="Updated Email" />
-
-  <label for="picture-input">Profile Picture</label>
-  <input id="picture-input" name="picture" type="file" />
-
-  <label for="input-password">Password</label>
-  <input required type="password" name="password" id="input-password" placeholder="Verify Details With Password" />
-
-  <button>Update Profile</button>
+  <button class="btn btn-primary">Update My Profile</button>
 </form>
