--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,8 +1,36 @@
 <h2>{{user.name}}'s Profile</h2>
 <img class="img-profile" src="{{user.picture}}" alt='user profile image' />
 <br>
-<a href="/profile/{{user._id}}/edit">Update Details</a>
+<div class="flex-column">
+  <div>
+    <button type="button" class="btn btn-link"><a href="/profile/{{user._id}}/edit">Update Details</a></button>
+  </div>
+  <div>
+    <button type="button" class="btn btn-link" data-toggle="modal" data-target="#exampleModal">Delete my Account</button>
+  </div>
+</div>
 
-<form action="/profile/{{_id }}" method="POST">
-<button>Delete Profile</button>
-</form>
+
+<!--<button type="button" class="btn btn-link">Delete my Account</button>-->
+<!-- Delete Account Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Are you sure?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        This cannot be undone.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Nevermind!</button>
+        <form action="/profile/{{_id }}" method="POST"></form>
+          <button type="button" class="btn btn-primary">Yes, Delete</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
