--- a/views/places/update.hbs
+++ b/views/places/update.hbs
@@ -1,14 +1,14 @@
 {{#with place}}
 <h1>You are updating {{name}} place</h1>
 
-  <form method="POST" enctype="multipart/form-data">
+  <form action="" method="POST" enctype="multipart/form-data">
 
 <div>
 <img class="img-list" src="{{pictureUrl}}">
 
   <div>
   <label for="picture-input">Update Picture:</label><br>
-  <input id="picture-input" name="picture" type="file" required/>
+  <input id="picture-input" name="picture" type="file"/>
 </div>
 
 </div>
