--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,21 +1,20 @@
 <h1>{{title}}</h1>
-
-<div class="card-columns">
+<div class="card-columns pt-5">
   {{#each places}}
   <!-- Card -->
-  <div class="card promoting-card">
+  <div class="card promoting-card shadow-sm">
     <!-- Card content -->
-    <div class="card-body d-flex flex-row">
+    <!--<div class="card-body d-flex flex-row">-->
       <!-- Avatar -->
-      <img src="{{user.picture}}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
+      <!--<img src="{{user.picture}}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">-->
       <!-- Content -->
-      <div>
+      <!--<div>-->
         <!-- Title -->
-        <h4 class="card-title font-weight-bold mb-2">{{ name }}</h4>
+        <!--<h4 class="card-title font-weight-bold mb-2">{{ name }}</h4>-->
         <!-- Subtitle -->
-        <p class="card-text"><i class="far fa-clock pr-2"></i>{{createdDate}}</p>
-      </div>
-    </div>
+        <!--<p class="card-text"><i class="far fa-clock pr-2"></i>{{createdDate}}</p>-->
+      <!--</div>-->
+    <!--</div>-->
     <!-- Card image -->
     <div class="view overlay">
       <img class="card-img-top rounded-0" src="{{pictureUrl}}" alt="Card image cap">
@@ -25,13 +24,19 @@
     </div>
     <!-- Card content -->
     <div class="card-body">
-      <div class="collapse-content">
+      <div>
         <!-- Text -->
-        <p class="card-text collapse" id="collapseContent">{{ description }}</p>
+        <p>{{ description }}</p>
         <!-- Button -->
-        <a class="btn btn-flat red-text p-1 my-1 mr-0 mml-1 collapsed" data-toggle="collapse" href="#collapseContent" aria-expanded="false" aria-controls="collapseContent"></a>
-        <i class="fas fa-share-alt text-muted float-right p-1 my-1" data-toggle="tooltip" data-placement="top" title="Share this post"></i>
-        <i class="fas fa-heart text-muted float-right p-1 my-1 mr-3" data-toggle="tooltip" data-placement="top" title="I like it"></i>
+        <div>
+          <div>
+            <a class="btn btn-link stretched-link" href="/places/{{_id}}"><!--<i class="fas fa-arrow-right"></i>-->→</a>
+          </div>
+          <!--<div>
+            <i class="fas fa-share-alt float-right" data-toggle="tooltip" data-placement="top" title="Share this post"></i>
+            <i class="fas fa-heart float-right " data-toggle="tooltip" data-placement="top" title="I like it"></i>
+          </div>-->
+        </div>
       </div>
     </div>
   </div>
