--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -1,7 +1,7 @@
 <h2>Update Your Details</h2>
 
 <form method="POST" enctype="multipart/form-data">
-<div class="form-group">
+<div class="form-group"> 
     <label for="input-name">Username</label>
     <input required type="text" id="input-name" name="name" class="form-control" aria-describedby="emailHelp"/>
   </div>
@@ -19,3 +19,6 @@
 
   <button class="btn btn-primary">Update My Profile</button>
 </form>
+
+<!--prepopulate form with user details-->
+<!--include more form validation, same as fabio (except password for now)-->
