--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -27,8 +27,8 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Nevermind!</button>
-        <form action="/profile/{{_id }}" method="POST"></form>
-          <button type="button" class="btn btn-primary">Yes, Delete</button>
+        <form action="/profile/delete" method="POST">
+          <button class="btn btn-primary">Yes, Delete</button>
         </form>
       </div>
     </div>
