--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,7 @@
     <title>{{title}}</title>
     <!--Bootstrap CSS Link-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/styles/font-awesome.min.css">
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
