--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,17 +4,17 @@
   <!-- Card -->
   <div class="card promoting-card shadow-sm">
     <!-- Card content -->
-    <!--<div class="card-body d-flex flex-row">-->
+    <div class="card-body d-flex flex-row">
       <!-- Avatar -->
-      <!--<img src="{{user.picture}}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">-->
+      <img src="{{user.picture}}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
       <!-- Content -->
-      <!--<div>-->
+      <div>
         <!-- Title -->
-        <!--<h4 class="card-title font-weight-bold mb-2">{{ name }}</h4>-->
+        <h4 class="card-title font-weight-bold mb-2">{{ name }}</h4>
         <!-- Subtitle -->
-        <!--<p class="card-text"><i class="far fa-clock pr-2"></i>{{createdDate}}</p>-->
-      <!--</div>-->
-    <!--</div>-->
+        <p class="card-text"><i class="far fa-clock pr-2"></i>{{createdDate}}</p>
+      </div>
+    </div>
     <!-- Card image -->
     <div class="view overlay">
       <img class="card-img-top rounded-0" src="{{pictureUrl}}" alt="Card image cap">
