--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -112,3 +112,10 @@ button,
   width: 100%;
   height: 20em;
 }
+
+.avatar-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
