--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,7 @@
     <!-- Card content -->
     <div class="card-body d-flex flex-row">
       <!-- Avatar -->
-      <img src="{{user.picture}}" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
+      <img src="{{creator.picture}}" class="avatar-img" height="50px" width="50px" alt="avatar">
       <!-- Content -->
       <div>
         <!-- Title -->
