--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -1,20 +1,30 @@
 <h2>Update Your Details</h2>
 
-<form method="POST" enctype="multipart/form-data">
-<div class="form-group"> 
-    <label for="input-name">Username</label>
-    <input required type="text" id="input-name" name="name" class="form-control" aria-describedby="emailHelp"/>
-  </div>
+<form action="" method="POST" enctype="multipart/form-data">
+
   <div class="form-group">
-    <label for="input-email">Email Address</label>
-    <input required type="email" id="input-email" name="email" class="form-control"/>
+    <label for="name">Username</label>
+    <input required  id="name" name= "name" type="text" value="{{user.name}}" class="form-control" aria-describedby="emailHelp">
   </div>
-  <div>
-    <label for="picture-input">Profile Photo</label>
-    <input id="picture-input" name="picture" type="file" class="form-control-file" aria-describedby="profileHelp"/>
-  </div>
+
   <div class="form-group">
-    <input required type="password" name="password" id="input-password" class="form-control mt-4" placeholder="Enter password for verification"/>
+    <label for="email">Email Address</label>
+    <input required id="email" name="email" type="email"  value="{{user.email}}" class="form-control"/>
+  </div>
+
+  <div class="form-group">
+    <label for="location">Location</label>
+    <input type="text" id="location" name="location" value="{{user.location}}" class="form-control"/>
+  </div>
+
+  <div class="form-group">
+    <label for="bio">Something About You</label>
+    <input type="text" id="bio" name="bio" value="{{user.bio}}" class="form-control"/>
+  </div>
+
+  <div class="form-group">
+    <label for="picture">Profile Photo</label>
+    <input id="picture" name="picture" type="file" class="form-control-file" aria-describedby="profileHelp"/>
   </div>
 
   <button class="btn btn-primary">Update My Profile</button>
