--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -3,7 +3,7 @@
 <br>
 <div class="flex-column">
   <div>
-    <button type="button" class="btn btn-link"><a href="/profile/{{user._id}}/edit">Update Details</a></button>
+    <button type="button" class="btn btn-link"><a href="/profile/edit/{{user._id}}">Update Details</a></button>
   </div>
   <div>
     <button type="button" class="btn btn-link" data-toggle="modal" data-target="#exampleModal">Delete my Account</button>
