wednesday / after lunch

--- a/views/places/create.hbs
+++ b/views/places/create.hbs
@@ -2,7 +2,7 @@
   <!--DIV 1-->
   <div class="row mt-4">
     <div class="col-6">
-      <p><strong>Part 1:</strong> Enter details about the art.</p>
+      <p><strong>Step 1:</strong> Enter details about the art.</p>
       <div class="form-group">
         <label for="name">Title</label>
         <input required type="text" id="name" name="name" class="form-control" placeholder="If it had a name, what would you call it?"/>
@@ -27,7 +27,7 @@
     </div>
     <!--DIV 2-->
     <div class="col-6">
-      <p><strong>Part 2:</strong> Select location of the art.</p>
+      <p><strong>Step 2:</strong> Select location of the art.</p>
       <div id="map-container">
       </div>
     </div>
