--- a/views/places/update.hbs
+++ b/views/places/update.hbs
@@ -1,5 +1,5 @@
 {{#with place}}
-<h1>You are updating {{name}} place</h1>
+<h3>You are updating: {{name}}</h3>
 
   <form action="" method="POST" enctype="multipart/form-data">
 
