--- a/views/message.hbs
+++ b/views/message.hbs
@@ -1,10 +1,15 @@
-<p>Thanks for writing us. We'll get back to you shortly.</p>
 
-<h2>Email</h2>
-{{email}}
- 
-<h2>Subject</h2>
-{{subject}}
- 
-<h2>Message</h2>
-{{message}}
+<p class="pt-3">Thanks for writing us - we'll get back to you soon. Here's a copy of what you wrote:</p>
+<div class="pt-3">
+  <h4>Your Email</h4>
+  <i>{{email}}</i>
+</div>
+<div class="pt-3">
+  <h4>Subject</h4>
+  <i>{{subject}}</i>
+</div>
+<div class="pt-3 pb-3">
+  <h4>Message</h4>
+  <i>{{message}}</i>
+</div>
+<a class="btn btn-primary btn-sm" href="/">Continue</a>
