--- a/views/places/create.hbs
+++ b/views/places/create.hbs
@@ -34,6 +34,7 @@
   </div>
 </form>
 
+<!--Map Script-->
 <script>
 
  const $inputLatitude = document.getElementById('latitude-input');
@@ -65,7 +66,6 @@ map.addListener('click', event => {
     })
 }
 </script>
-
 {{>mapscript}}
 
 
