--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -2,17 +2,17 @@
 
 <form method="POST">
   <div class="form-group">
-    <label for="input-email">Email</label>
+    <label for="input-email">Your Email</label>
     <input required type="email" id="input-email" name="email" class="form-control"/>
   </div>
   <div class="form-group">
     <label for="input-password">Subject</label>
-    <input required type="subject" name="subject" id="input-subject" class="form-control"/>
+    <input required type="text" name="subject" id="input-subject" class="form-control"/>
   </div>
   <div class="form-group">
     <label for="message">Message</label>
-    <textarea required type="message" class="form-control" id="input-message" rows="3"></textarea>
+    <textarea required type="text" name="message" class="form-control" id="input-message" rows="3"></textarea>
   </div>
+  <small class="form-text text-muted pb-3">We'll get back to you within 24 hours.</small>
   <button class="btn btn-primary">Send</button>
-  <small class="form-text text-muted">We'll likely get back to you within 24 hours.</small>
 </form>
