Starting with comments, Like sstem done, problem is change text of button

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -43,7 +43,7 @@
   </body>
   
   <!--Footer Row-->
-    <div class="container pt-5 pb-5">
+    <div class="page-footer pt-5 pb-5">
       <hr>
       <div class="row">
         <div class="col-4">
