Added directions to art places and user location

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -113,6 +113,10 @@ button,
   width: 100%;
   height: 20em;
 }
+#directionsPanel {
+  width: 100%;
+  height: 20em;
+}
 
 .avatar-img {
   width: 50px;
