--- a/views/partial/mapscript.hbs
+++ b/views/partial/mapscript.hbs
@@ -1,2 +1,8 @@
  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCymuzai-3o2F71Utf7vmG6IKfZrrB7Qyk&callback=initMap">
     </script>
+
+
+    <script src=" https://maps.googleapis.com/maps/api/directions/js?key=AIzaSyCymuzai-3o2F71Utf7vmG6IKfZrrB7Qyk&callback=initMap">
+    </script>
+
+   
